--- a/DiveIntoAndroidNDK.html
+++ b/DiveIntoAndroidNDK.html
@@ -255,7 +255,7 @@ extern "C" jint JNI_OnLoad(JavaVM* vm, void* reserved)
 			</li>
 		</ul>	
 			
-		<p/><b>So why did I dive in first with Eclipse?</b> The true answer is, I was too stupid for doing that with Android Studio.
+		<p/><b>So why did I dive in first with Eclipse?</b> The true answer is, I was to stupid for doing that with Android Studio.
 		But in retroperspective I think this is natural, because
 		Android Studio is a huge tool. Diving in Android NDK with Android Studio, Gradle and C with no experiences in neither of them feels like
 		trying to build a sand castle using an excavator for the first time. 
