--- a/DiveIntoAndroidNDK.html
+++ b/DiveIntoAndroidNDK.html
@@ -258,8 +258,8 @@ extern "C" jint JNI_OnLoad(JavaVM* vm, void* reserved)
 		<p/><b>So why did I dive in first with Eclipse?</b> The true answer is, I was to stupid for doing that with Android Studio.
 		But in retroperspective I think this is natural, because
 		Android Studio is a huge tool. Diving in Android NDK with Android Studio, Gradle and C with no experiences in neither of them feels like
-		trying to build a sand castle using an excavator for the first time. 
-		<p/><img src="" alt="(img not yet drawn)"/>
+		trying to build a sand castle using an excavator for the first time.<br/>
+		<img src="pictures/DiveIntoAndroidNDK/BeachBagger.png" alt="Build sand castle with an excavotor"/>
 		<ul>
 			<li>First someone has to understand that C and Java lives in their own world.</li>
 			<li>Than you have to understand how to combine these two worlds with JNI.</li>
