--- a/DiveIntoAndroidNDK.html
+++ b/DiveIntoAndroidNDK.html
@@ -17,10 +17,12 @@
 			After we have realized that compilation of <i>C</i> and <i>Java</i> is done in complete different worlds,
 			we want to dive smoothly into the <a href="https://developer.android.com/ndk/guides/index.html">Android NDK</a> (native developer kit),
 			which combines these two worlds within an Android application. First we are going to take a glance at the Java Native Interface (JNI), 
-			which lets us call C-functions within Java. Second the NDK basics will be explained. After that I tried to dive in with a little example-project in Android Studio
-			- and crashed really frustrating. Finally I tried the same with Eclipse and become happy again :)
-			My full example project can be found <a href="https://github.com/Torsten89/DiveIntoAndroidNDKWithEclipse">here</a>
-			and is inspired by <a href="https://newcircle.com/s/post/1153/introduction_to_ndk">this</a>.
+			which lets us call C-functions within Java. Second the NDK basics will be explained.
+			After that the gained knowledge will be explored with a little example-project,
+			which is inspired by <a href="https://newcircle.com/s/post/1153/introduction_to_ndk">this YouTube-tutorials</a>.
+			I did a version for <a href="https://github.com/Torsten89/DiveIntoAndroidNDKWithEclipse">Eclipse here</a>
+			and for <a href="https://github.com/Torsten89/Dive-Into-Android-NDK">Android Studio here</a>.
+
 			
 		<h4>Java Native Interface (JNI)<span id="JNI" class="anchor"/></h4>
 			We have already seen <a href="compiling.html">here</a> that Java code runs within a VM and therefore some translation for the concrete underlying platform has to exist.
